--- a/dev/scss/_in-the-news.scss
+++ b/dev/scss/_in-the-news.scss
@@ -4,7 +4,7 @@
 
 .in-the-news {
   width: 100%;
-  padding: 4rem 0;
+  padding: 5rem 0;
   @include setFlex(column);
   h2 {
     @include setFont(200);
@@ -46,6 +46,7 @@
             width: 80%;
             margin: 0 auto;
         }
+        margin-bottom: 1rem;
     }
   }
 }
